--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <title>Rock Paper Scissors</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel='stylesheet' href='style.css' type='text/css'>
+
+
+
 </head>
 <body>
 <div class='container'>
 
-    <span class='title'>Rock Paper Scissors</span>
+    <h1>Rock-Paper-Scissors</h1>
+   <ul id="score">
+       <li><i class="fas fa-user-alt"></i> <span>0</span></li>
+       <li><span>0</span><i class="fas fa-robot"></i></li>
+   </ul>
+   <p class='message'>Make your move!</p>
     <ul id="r-p-s">
         <li class='rock'><i class="fas fa-hand-rock"></i></li>
         <li class='paper'><i class="fas fa-hand-paper"></i></li>
@@ -17,6 +25,7 @@
 </div>
 
 
+<script src="app.js"></script>
 
 </body>
 </html>   
