--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>  
     <div class='container'>
+        <div class="wrapper">
         <h1>Rock-Paper-Scissors</h1>
     <ul id="score">
        <li><i class="fas fa-user-alt"></i> <span>0</span></li>
@@ -24,6 +25,8 @@
         <li class='paper'><i class="fas fa-hand-paper"></i></li>
         <li class='scissors'><i class="fas fa-hand-scissors"></i></li>
     </ul>
+
+</div>
 </div>
 
 
