--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li class='paper'><i class="fas fa-hand-paper"></i></li>
         <li class='scissors'><i class="fas fa-hand-scissors"></i></li>
     </ul>
-
+<button class='btn-reset'>Reset </button>
 </div>
 </div>
 
